--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
           node-version: 18
           cache: yarn
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
       - name: Build website
         run: yarn build
 
