--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 18
           cache: yarn
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
       - name: Test build website
         run: yarn build
